# fastapi-app

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deployment.yml  dev_fastapi-web-app.yml  simple.yml  test.yml
app/: config.py  db_connection.py  main.py  models.py  schemas.py
app/common/: abstract.py  constants.py  request.py  response.py
app/common/db/: connection.py
app/controller/: item.py
app/crud/: repo.py  routes.py
app/model/: item.py
app/repository/: item.py  utils.py
app/service/: item.py
tests/unit/: test_crud_api.py
