[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Mohamed Salman <mohamed.akj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.28"
sqlalchemy-utils = "^0.41.1"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.2.1"
pydantic = "^2.6.4"
pytest = "^8.1.1"
httpx = "^0.27.0"
ruff = "^0.3.5"
mypy = "^1.9.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120


[tool.ruff.lint]
extend-select = ["E501"]